--- a/src/components/Typography.module.css
+++ b/src/components/Typography.module.css
@@ -1,10 +1,10 @@
 .typography__frame {
     display: flex;
     justify-content: space-around;
-    height: 800px;
+    height: 780px;
 }
-.typography__image__frame,
-.typography__text__frame {
+.typography__text__frame,
+.typography__image__frame {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -13,9 +13,9 @@
 .typography__text__frame { flex: 2; margin-left: 100px; }
 .typography__image__frame { flex: 1; margin-right: 100px; align-items: center; }
 
-.typography__frame__top { margin-left: 40px; }
-.typography__frame__mid { margin-left: 80px; }
-.typography__frame__bot { margin-left: 40px; }
+.typography__text__top { margin-left: 40px; }
+.typography__text__mid { margin-left: 80px; }
+.typography__text__bot { margin-left: 40px; }
 
 .typography__text__bold {
     font-weight: bold;
@@ -45,20 +45,31 @@
 
 /* Mobile */
 @media screen and (max-width: 768px) {
-    .typography__frame__top { margin-right: 200px; }
-    .typography__frame__mid { margin-right: 0px; }
-    .typography__frame__bot { margin-left: 20px; }
+    .typography__frame { height: 550px; } 
 
-    .typography__frame { display: block; }
-    .typography__text__frame { align-items: center; }
-    .typography__image { width: 250px; }
-    .typography__text__bold { font-size: 4.6rem; }
-    .typography__text__bsolid { font-size: 3.6rem; }
+    .typography__image__space { flex: 1; }
+    .typography__image__value { flex: 1; }
+    .typography__image { width: 220px; }
+
+    .typography__text__top { margin-left: 30px; }
+    .typography__text__mid { margin-left: 60px; }
+    .typography__text__bot { margin-left: 30px; }
+
+    .typography__text__bold { font-size: 5.8rem; }
+    .typography__text__bsolid { font-size: 4.8rem; }
+    .typography__text__nsolid { font-size: 0.8rem; margin: 0 10px; }
 }
 
-@media screen and (max-width: 470px) {
-    .typography__frame { display: block; }
-    .typography__image { width: 250px; }
+@media screen and (max-width: 500px) {
+    .typography__image__frame { flex: 3; }
+    .typography__image { width: 150px; }
+
+    .typography__text__frame { flex: 7; }
+    .typography__text__top { margin-left: 10px; }
+    .typography__text__mid { margin-left: 30px; }
+    .typography__text__bot { margin-left: 10px; }
+
     .typography__text__bold { font-size: 3.6rem; }
     .typography__text__bsolid { font-size: 2.6rem; }
+    .typography__text__nsolid { font-size: 0.6rem; margin: 0 10px; }
 }
