--- a/src/components/Typography.module.css
+++ b/src/components/Typography.module.css
@@ -1,7 +1,8 @@
 .typography__frame {
     display: flex;
     justify-content: space-around;
-    height: 780px;
+    /* height: 780px; */
+    height: calc(100vh - 100px - 70px);
 }
 .typography__text__frame,
 .typography__image__frame {
