--- a/src/index.css
+++ b/src/index.css
@@ -118,6 +118,12 @@ body {
     font-size: 1.4rem;
 }
 
+a:-webkit-any-link {
+    text-decoration: none;
+    color: var(--text1);
+    cursor: pointer;
+}
+
 /* Desktop */
 @media screen and (max-width: 1919px) {
     body { width: 1376px; }
