--- a/src/components/Slider.module.css
+++ b/src/components/Slider.module.css
@@ -1,7 +1,12 @@
 .slider__frame {
-    max-width: 100%;
+    width: 100%;
+    height: 100%;
+    display: inline-block;
 }
 
 .slider__content {
+    width: 100%;
+    height: 100%;
     object-fit: cover;
+    margin: auto;
 }
