feat: Add a link style for firefox browser
Add new style in index.css
- any-link property

--- a/src/index.css
+++ b/src/index.css
@@ -118,6 +118,11 @@ body {
     font-size: 1.4rem;
 }
 
+a:any-link {
+    text-decoration: none;
+    color: var(--text1);
+    cursor: pointer;
+}
 a:-webkit-any-link {
     text-decoration: none;
     color: var(--text1);
