feat: Add dark mode
Added item
- local storage custom hook
- theme context

--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -5,6 +5,7 @@ header {
     justify-content: space-between;
     margin: 0 auto;
     user-select: none;
+    font-size: var(--text-size3)
 }
 
 header div {
@@ -29,7 +30,7 @@ header div img {
 .themeDark,
 .themeSearch {
     height: 1.8rem;
-    filter: brightness(0%);
+    filter: var(--svg-element);
 }
 
 
