--- a/src/index.css
+++ b/src/index.css
@@ -12,9 +12,10 @@
 
 html {
     font-size: 10px;
+    --text-size3: 1.8rem;
 }
 
-.theme-light {
+.themeLight {
     --bg-page1: #F8F9FA;
     --bg-page2: #FFFFFF;
     --bg-element1: #FFFFFF;
@@ -38,6 +39,7 @@ html {
     --border4: #F1F3F5;
     --primary1: #12B886;
     --primary2: #20C997;
+    --svg-element: brightness(0);
     --destructive1: #FF6B6B;
     --destructive2: #FF8787;
     --button-text: #FFFFFF;
@@ -60,7 +62,7 @@ html {
     --prism-line-number: #585c63;
 }
 
-.theme-dark {
+.themeDark {
     --bg-page1: #121212;
     --bg-page2: #121212;
     --bg-element1: #1E1E1E;
@@ -84,6 +86,7 @@ html {
     --border4: #2A2A2A;
     --primary1: #96F2D7;
     --primary2: #63E6BE;
+    --svg-element: brightness(0) invert(1);
     --destructive1: #FFC9C9;
     --destructive2: #FFA8A8;
     --button-text: #121212;
@@ -111,11 +114,13 @@ html {
 ::-webkit-scrollbar-thumb { background-color: #d6dee1; border-radius: 10px; border: 3px solid transparent; background-clip: content-box; }
 ::-webkit-scrollbar-thumb:hover { background-color: #a8bbbf; }
 
-body {
+.frame { background-color: var(--bg-page1); }
+.detail {
     font-family: 'SSAntRegular';
     width: 1728px;
     margin: 0 auto;
     font-size: 1.4rem;
+    color: var(--text1);
 }
 
 a:any-link {
@@ -131,16 +136,16 @@ a:-webkit-any-link {
 
 /* Desktop */
 @media screen and (max-width: 1919px) {
-    body { width: 1376px; }
+    .detail { width: 1376px; }
 }
 
 /* Laptop */
 @media screen and (max-width: 1440px) {
-    body { width: 1024px; }
+    .detail { width: 1024px; }
 }
 
 @media screen and (max-width: 1056px) {
-    body { width: calc(100% - 2rem); }
+    .detail { width: calc(100% - 2rem); }
 }
 
 /* Mobile */
