--- a/src/components/Platform.module.css
+++ b/src/components/Platform.module.css
@@ -1,7 +1,8 @@
 .group__frame {
-    display: flex;
+    display: inline-flex;
     height: 70px;
     justify-content: flex-end;
+    float: right;
 }
 
 .platform__frame {
@@ -15,6 +16,7 @@
     width: 2.2em;
     cursor: pointer;
     filter: var(--svg-element);
+    z-index: 0;
 }
 
 
