feat: Add music function
Added item
- music next function
- edit music component

--- a/src/components/Music.module.css
+++ b/src/components/Music.module.css
@@ -30,7 +30,7 @@
 .music__icon + input {
     display: block;
     position: absolute;
-    
+    right: 0;
 }
 .music__icon:hover + input {
     display: block;
