--- a/src/components/Music.module.css
+++ b/src/components/Music.module.css
@@ -6,35 +6,46 @@
 }
 
 .music__name {
+    display: flex;
     margin-right: 10px;
 }
 
 .music__time {
     display: inline-block;
-    height: 3px;
+    height: 2.8px;
     width: 120px;
     border-radius: 5px;
     background-color: var(--text1);
     margin-right: 10px;
 }
 
-.music__action {
-    cursor: pointer;
-}
-.music__action,
 .music__icon {
-    height: 1.6rem;
+    width: 1.4rem;
     margin: 0 6px;
+    cursor: pointer;
+} 
+
+.music_area { height: 100%; display: flex; }
+
+.music_area + .music__input__volume {
+    display: none;
+    margin-left: -77px;
+    margin-top: -150px;
+    transform: rotate(270deg);
+    -moz-transform: rotate(270deg); /*do same for other browsers if required*/
+}
+.music_area:hover + .music__input__volume {
+    display: block;
 }
 
-.music__icon + input {
+.music_area + .music__input__volume:hover {
     display: block;
-    position: absolute;
-    right: 0;
 }
-.music__icon:hover + input {
-    display: block;
-    position: absolute;
+
+
+
+marquee {
+    width: 40px;
 }
 
 
